Close #2 --- Squashed commit of the following:
commit 6346084e31b14801ff46c67468674e1888c5200c
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Mon Jul 24 09:48:44 2023 +0000

    Prettier to all files

commit cb9c06b859373aa8280c2b6bc674503d7c9224bb
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Mon Jul 24 09:48:08 2023 +0000

    add vscode recoomend ext

commit 8fac1d4e10f65bf1f654462abc785821853e488f
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Mon Jul 24 09:47:54 2023 +0000

    add prettier.config

commit cfd0f6df702dd8a438dda037c147a8f12d528260
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Mon Jul 24 09:47:24 2023 +0000

    add prettier/prettier-plugin-astro

--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "@astrojs/sitemap": "^2.0.1",
     "astro": "^2.9.1",
     "vercel": "^31.0.4"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0",
+    "prettier-plugin-astro": "^0.11.0"
   }
 }
