--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "vercel": "^31.0.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-astro": "^0.27.2",
+    "eslint-plugin-import": "^2.27.5",
     "prettier": "^3.0.0",
     "prettier-plugin-astro": "^0.11.0"
   }
