--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vercel": "^31.0.4"
   },
   "devDependencies": {
+    "@astrojs/partytown": "^1.2.3",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
