Close #1 --- Squashed commit of the following:
commit 6ab53988c489b9850b29166ea59bfe9ecdfcbe50
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 08:55:31 2023 +0000

    Modify page layouts

commit 14d0966a5730d359654d283c081cdc6fc1d0aa66
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 08:55:00 2023 +0000

    remove about page

commit 614363b5082626c75fe934fa4a19ff9babe1063e
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 08:54:48 2023 +0000

    replace md

commit 04451baf71b78092f34da2f7b8308f0fd3c0820e
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 08:54:06 2023 +0000

    Add utils

commit be678270df74216c97e950f3dfda4210449b599f
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 08:48:30 2023 +0000

    Add package image/sharp/astro-icon

commit 1c251044897746952edb09d6c01bd9939c127142
Author: TakashiAihara <47384567+TakashiAihara@users.noreply.github.com>
Date:   Tue Jul 25 02:14:20 2023 +0000

    modify footer

--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.2",
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^2.0.1",
     "astro": "^2.9.1",
+    "astro-icon": "^0.8.1",
+    "sharp": "^0.32.4",
     "vercel": "^31.0.4"
   },
   "devDependencies": {
